work in progress

--- a/hello-spider/index.html
+++ b/hello-spider/index.html
@@ -10,21 +10,25 @@
 </head>
 <body>
   <h1>Hello Spider</h1>
-  <p>Click and drag in the red box below.<br><br>The mouse tracking and updating
-  are implemented using simple C++ in the
-  <a href="https://github.com/pkholland/mutantspider/blob/master/examples/hello_spider/hello_spider.cpp">
-  <code>hello_spider.cpp</code></a> file.  See the
-  <a href="https://github.com/pkholland/mutantspider/blob/master/examples/hello_spider/hello_spider.cpp#L142-L195">
-  <code>Paint</code></a> method for the code that generates the black dot, and the
-  <a href="https://github.com/pkholland/mutantspider/blob/master/examples/hello_spider/hello_spider.cpp#L79-L121">
-  <code>HandleInputEvent</code></a> method for tracking the mouse position.  On every mouse
-  event the <code>mouse_loc_x_</code> and <code>mouse_loc_y_</code> member variables are
-  upated from the event information passed in by the browser.  Then a call to <code>Paint</code>
-  is issued.  <code>Paint</code> walks all pixels, computing the distance from that pixel
-  to the point <code>&#60mouse_loc_x_, mouse_loc_y_&#62</code>, clipping this distance value to no
-  more than 255.  The red component of the pixel in question is then set to this distance, and the
-  other components (green and blue) are set to 0.  Once the entire bitmap is painted this way
-  it issues a call to display the bitmap.</p>
+  <p>Click and drag in the red box below.</p>
+  <p>The red box is updated using simple C++ in the
+  <a href="https://github.com/pkholland/mutantspider-examples/blob/master/hello-spider/blackdot.cpp">
+  <code>blackdot.cpp</code></a> file.  See the
+  <a href="https://github.com/pkholland/mutantspider-examples/blob/master/hello-spider/blackdot.cpp#L50-L83">
+  <code>BD_GenBlackDot</code></a> function for the code that generates the red bitmap with the black dot. This function
+  is called from javascript by
+  <a href="https://github.com/pkholland/mutantspider-examples/blob/master/hello-spider/blackdotjs.js6#L161-L164">
+  this support code</a>, which is called from
+  <a href="https://github.com/pkholland/mutantspider-examples/blob/master/hello-spider/hello-spider.js#L10">
+  this</a> simple javascript code.  After generating the updated bitmap, the <code>BD_GenBlackDot</code> C++ function
+  "returns" the bitmap to the javascript code by calling <code>bd_show_bitmap</code>
+  <a href="https://github.com/pkholland/mutantspider-examples/blob/master/hello-spider/blackdot.cpp#L81">here</a>.
+  That C++ function call results in
+  <a href="https://github.com/pkholland/mutantspider-examples/blob/master/hello-spider/blackdotjs.js6#L116-L119">
+  this</a> javascript code being called, which calls back the "listener" that was previous registered.  That listener is
+  <a href="https://github.com/pkholland/mutantspider-examples/blob/master/hello-spider/hello-spider.js#L46-L53">
+  registered here</a>, giving it the code that actually updates the DOM itself.
+  </p>
   <canvas id="black_dot" style="width=100%">
     Aw snap... your browser doesn't appear to support the <code>&lt;canvas&gt;</code> element.
   </canvas>
