--- a/file-system/index.html
+++ b/file-system/index.html
@@ -30,20 +30,20 @@
   view of this page.  If it finds it, it validates that it is correct and then deletes it.  If it doesn't
   find it, it writes it.  So it flips back and forth between the two states each time you view the page.
   The support for this file system is based on the html5 'IndexedDB' service for a javascript build, and
-  Google's 'html5fs' service on a PNaCl build.  You can see which build you are running in the 'Status'
-  field at the top of this page.  If your browser doesn't support PNaCl, and doesn't support IndexedDB
-  then the test will fail.</p>
+  Google's 'html5fs' service on a PNaCl build</p>
   <p>The "resource" tests exercise the build system's ability to copy resource-like files from the build
   machine, into the executable itself in such a way that the code can access the files using standard
   <code>fopen</code> and <code>fread</code> calls.  You can read about how this feature works in the
-  <code>mutantspider/src/README.makefile</code> file - search for "Resources".</p>
+  <code>mutantspider/README.makefile</code> file - search for "Resources".</p>
   <p>The lines below this are the tests that are being tried or information about the testing.  If the
   line is normal, black text then that test passed.  In many cases the code is testing something which
   is supposed to <i>not</i> work - for example writing to a read-only file.  In these cases the test is
   verifying that the operation failed and set errno correctly.  If a line is printed in
   <span class="error">RED</span> then it indicates that the corresponding test failed.  The numbers in
   brackets at the start of each line are the line number in the two corresponding source files
-  (persistent_tests.cpp and resource_tests.cpp) that generated the printed line.
+  (persistent_tests.cpp and resource_tests.cpp) that generated the printed line.  When the line is an
+  <span class="error">error</span> line then the bracketed number is a link to the source line (on github)
+  of the line that prints the error.  This is generally immediately after the call that failed.
   <span class="heading">BOLD</span> lines are just information about the tests. Thes are not tests
   themselves.</p>
   <p>Note that as of this writing the PNaCl libraries tend to incorrectly support access permissions
