work in progress

--- a/file-system/index.html
+++ b/file-system/index.html
@@ -47,7 +47,7 @@
   <span class="heading">BOLD</span> lines are just information about the tests. Thes are not tests
   themselves.</p>
   <p>Note that as of this writing the PNaCl libraries tend to incorrectly support access permissions
-  in the persistent file system (html5fs) causing failers in these tests.  The asm.js libraries have
+  in the persistent file system (html5fs) causing failures in these tests.  The asm.js libraries have
   incomplete support for user-installed file systems causing failures to set errno correctly for
   certain cases.  This results in failures in the Resource tests.  The Mutantspider file system
   support code for both asm.js and PNaCl has a missing feature of not reporting when background writes
